CHANGES

2016-03-16
 * bug fix: added delimiter to function read_abundance in species.py

2016-03-12
 * run_phylo_cnv.py species: enabled read trimming/filtering
 * stream_seqs.py: added argparse

2016-03-06
 * updated help text, options, example usage for run_phylo_cnv.py
 * species.py: dropped normalization option, added species annotations, added read counts
 * snps.py: added additional options. changed default base-quality to 30
 * genes.py: added quality filtering options
 * filter_bam.py: automatically checks for N quality, ability to filter alns by mean quality
 * merge_snps.py: added multithreading; no upper limit on number of samples

2015-12-29
 * filter_bam.py: moved functions compute_aln_cov, compute_perc_id
 * filter_bam.py: now using alignment length instead of read length in function compute_perc_id

2015-12-26
 * added: nucleotide_diversity.py

2015-12-25
 * merge_snps.py: output list of samples that passed qc for given species

2015-12-23
 * merge_snps.py: checks if nsamples > maxopenfiles

2015-12-20
 * species.py: compatability with new version of MicrobeCensus

2015-12-11
 * species.py: changed -perc_identity to 94.5
 * data/pid_cutoffs.txt: changed 16S pid to 98

2015-12-08
 * annotate_snps.py: fixed gene_id field
 * species.py: changed max-evalue to 1e-5

2015-12-06
 * run_phylo_cnv.py species: allowed word lengths > 28

2015-12-02
 * species_prevalence.R: add option '-p' for plotting group proportions instead of sample counts

2015-11-23
 * added hidden option '-D DB' to run_phylo_cnv.py to allow user to specify alternate reference database

2015-11-19
 * added hidden option '--trim' to run_phylo_cnv.py genes and snvs to trim reads from 3'/right end

2015-11-17
 * added -i MAPID and -c ALN_COV to run_phylo_cnv.py species for tuning sensitivity

2015-11-14
 * major changes to species module:
   * added -d db_type to allow for search against ssuRNA database
   * modified data files: pid_cutoffs.txt, gene_length.txt for ssuRNA genes